@@ -3,6 +3,8 @@ glibc (2.30-5) UNRELEASED; urgency=medium
   [ Samuel Thibault ]
   * debian/patches/hurd-i386/git-trunc-times.diff: New patch to fix updating
     mtime/ctime on O_TRUNC.  Closes: #955270.
+  * debian/sysdeps/hurd.mk: Try to symlink mach/hurd headers from multiarch
+    directory when they are there.
 
  -- Samuel Thibault <sthibault@debian.org>  Sun, 29 Mar 2020 19:45:17 +0200
 
